--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,11 @@
+# Updated Kubernetes Deployment (hello-world-deployment.yaml)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world-deployment
+  namespace: helloworld
 spec:
-  replicas: 2 # You can adjust the number of replicas
+  replicas: 2
   selector:
     matchLabels:
       app: hello-world
@@ -15,7 +17,6 @@ spec:
       serviceAccountName: jenkins-controller
       containers:
         - name: hello-world-container
-          image: kk1registry.azurecr.io/hello-world:latest
-#          image: us-central1-docker.pkg.dev/onyx-codex-274605/hello-world-repo/hello-world:latest # Replace with your image
+          image: kk1registry.azurecr.io/spring-hello-world:latest
           ports:
             - containerPort: 8080
