--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,6 +17,6 @@ spec:
       #serviceAccountName: jenkins-controller
       containers:
         - name: hello-world-container
-          image: kk1registry.azurecr.io/spring-hello-world:latest
+          image: spring-hello-world:latest
           ports:
             - containerPort: 8080
