--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "org.sonarqube" version "4.4.1.3373"
+	id 'checkstyle'
 }
 
 group = 'com.example'
@@ -20,6 +21,11 @@ java {
 
 repositories {
 	mavenCentral()
+}
+
+checkstyle {
+	toolVersion = '10.12.1'
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
 }
 
 dependencies {
