--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
+import com.github.spotbugs.snom.SpotBugsTask
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id "org.sonarqube" version "4.4.1.3373"
 	id 'checkstyle'
+	id 'jacoco'
+	id 'com.github.spotbugs' version '5.2.5'
+	id 'org.owasp.dependencycheck' version '8.4.0'
+	id "org.sonarqube" version "4.4.1.3373"
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17' // Or your Java version
-}
-
-java {
+	sourceCompatibility = '17'
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
@@ -23,23 +25,18 @@ repositories {
 	mavenCentral()
 }
 
-checkstyle {
-	toolVersion = '10.12.1'
-	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
-	showViolations = true
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+checkstyle {
+	toolVersion = '10.12.1'
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+	showViolations = true
 }
 
-// Enable Checkstyle HTML + XML reports
 tasks.withType(Checkstyle).configureEach {
 	reports {
 		xml.required = true
@@ -58,14 +55,31 @@ tasks.test {
 	}
 }
 
-// JUnit test report configuration
-test {
-	useJUnitPlatform() // If you are using JUnit 5
-	testLogging {
-		events "passed", "skipped", "failed"
-	}
+jacocoTestReport {
+	dependsOn test
 	reports {
-		junitXml.required = true
+		xml.required = true
 		html.required = true
 	}
+}
+
+spotbugs {
+	toolVersion = '4.7.3'
+	effort = 'max'
+	reportLevel = 'low'
+}
+
+tasks.withType(SpotBugsTask).configureEach {
+	reports {
+		html.required = true
+		xml.required = false
+	}
+}
+
+dependencyCheck {
+	failBuildOnCVSS = 7.0
+	suppressionFile = "dependency-check-suppressions.xml"
+	analyzers.assemblyEnabled = false
+	formats = ['HTML']
+	outputDirectory = layout.buildDirectory.dir("reports/dependency-check")
 }
